option('legacy', type: 'boolean', value: true, description: 'Decode legacy (< 4.0) WavPack files')
option('dsd', type: 'boolean', value: true, description: 'Enable support for WavPack DSD files')
option('docs', type: 'boolean', value: true, description: 'Install documentation')
option('asm', type: 'feature', value: 'auto', description: 'Enable assembly optimizations (requires GNU AS or Microsoft Assembler)')
option('libcrypto', type: 'feature', value: 'auto', description: 'Use OpenSSL::Crypto library')
option('programs', type: 'feature', value: 'auto', description: 'Build programs')
option('cooledit_plugin', type: 'feature', value: 'auto', description: 'Build CoolEdit plugin')
option('winamp_plugin', type: 'feature', value: 'auto', description: 'Build WinAmp plugin')
option('tests', type: 'boolean', value: true, description: 'Build tests')
